<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.gorka.ribbit.ui.SignUpActivity"
                android:id="@+id/noIdeao"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFileContainer">

    <EditText
        android:id="@+id/userNameField"
        style="@style/authEditText"
        android:hint="@string/username_hint" >

        <requestFocus />
    </EditText>


    <EditText
        style="@style/authEditText"
        android:inputType="textPassword"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"/>

    <EditText
        android:inputType="textEmailAddress"
        style="@style/authEditText"
        android:id="@+id/emailField"
        android:hint="@string/email_hint"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/content_desc_button_divider"/>

    <Button
        style="@style/AuthButton"
        android:text="@string/sign_up_button_label"
        android:id="@+id/signUpButton"
        android:hint="@string/sign_up_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="0dp"/>

    <Button
        style="@style/AuthButton"
        android:text="@string/cancel_button_label"
        android:id="@+id/cancelButton"
        android:hint="@string/sign_up_button_label"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/buttonDivider"
        android:layout_marginLeft="0dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
