<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:context="com.gorka.ribbit.ui.LoginActivity"
                style="@style/AuthBackground">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background"/>

    <TextView
        android:id="@+id/title"
        android:text="@string/app_name"
        style="@style/AuthTitle"/>

    <TextView
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        style="@style/AuthSubTitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFileContainer">

        <EditText
            android:id="@+id/userNameField"
            android:hint="@string/username_hint"
            style="@style/authEditText">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/authEditText"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>

      </LinearLayout>



    <Button
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text"
        android:id="@+id/signUpText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="12dp"
        android:textColor="@android:color/white"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLogin"
        android:layout_below="@+id/signUpText"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>
